# rust-ecomerce-backend

./: .gitignore  Cargo.toml  docker-compose.yml  e_config.json
migrations/2024-10-09-122735_create_user/: up.sql
migrations/2024-10-09-123512_update_user/: down.sql  up.sql
migrations/2024-10-09-124035_create_identification/: down.sql  up.sql
migrations/2024-10-09-124514_create_address/: down.sql  up.sql
migrations/2024-10-09-124826_create_phone/: down.sql  up.sql
migrations/2024-10-09-125205_update_phone/: up.sql
migrations/2024-10-09-125652_update_address_id/: up.sql
migrations/2024-10-09-125832_update_identification_id/: up.sql
migrations/2024-10-09-130120_create_alternative_phone/: up.sql
migrations/2024-10-09-130224_create_seller_reputation/: down.sql  up.sql
migrations/2024-10-09-130526_create_buyer_reputation/: down.sql  up.sql
migrations/2024-10-09-130727_create_status/: up.sql
migrations/2024-10-09-130905_create_credit/: down.sql  up.sql
migrations/2024-10-09-131107_create_tags/: down.sql  up.sql
migrations/2024-10-09-143627_create_product/: up.sql
migrations/2024-10-09-150930_create_sale_terms/: down.sql  up.sql
migrations/2024-10-09-171842_create_pictures/: down.sql  up.sql
migrations/2024-10-09-190031_create_other_products_tables/: down.sql  up.sql
migrations/2024-10-09-220928_update_products_table/: up.sql
migrations/2024-11-15-124146_update_variation_table/: up.sql
migrations/2024-11-15-125555_update_prices_table/: up.sql
migrations/2024-11-18-184235_create_attribute_combination/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  (+1 more)
(+110 files in other folders)
