[package]
name = "ecomerce-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.20", default-features = false, features = [
    "clock",
    "serde",
] }
# Used in the Map Data into Structs section
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
futures = "0.3.31"
dotenvy = "0.15.7"
diesel = { version = "^2.2.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "64-column-tables"
] }
lettre = "0.11.9"
