[package]
name = "ecomerce-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.20", default-features = false, features = [
    "clock",
    "serde",
] }
# Used in the Map Data into Structs section
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
futures = "0.3.31"
dotenvy = "0.15.7"
diesel = { version = "^2.2.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "64-column-tables",
    "numeric"
] }
lettre = "0.11.9"
bigdecimal = { version = "0.4.5", features = ["serde"] }
log = "0.4"
env_logger = "0.11.5"
config = "0.14.0"
validator = { version = "^0.17.0", features = ["derive"] }
lazy_static = "1.5.0"
serde_valid = "0.25.0"
regex = "1.11.0"
